--- a/src/blocks/tabs/style.scss
+++ b/src/blocks/tabs/style.scss
@@ -121,18 +121,10 @@
 
 .uagb-tabs__wrap.uagb-tabs__hstyle2-desktop {
 
-	ul.uagb-tabs__panel {
-		border-bottom: 1px solid #b3b6b9;
-	}
-
 	.uagb-tab {
 		margin: 10px 10px -1px 0;
 		border-top-left-radius: 4px;
 		border-top-right-radius: 4px;
-	}
-
-	.uagb-tabs__active {
-		border-bottom-style: solid;
 	}
 
 	.uagb-tabs__body-wrap {
@@ -156,7 +148,6 @@
 .uagb-tabs__wrap.uagb-tabs__hstyle4-desktop {
 
 	.uagb-tab {
-		border-radius: 30px;
 		border-style: solid;
 		margin: 10px 10px 10px 0;
 	}
@@ -164,7 +155,6 @@
 }
 
 .uagb-tabs__wrap.uagb-tabs__hstyle5-desktop {
-	border-style: solid;
 
 	ul.uagb-tabs__panel {
 		justify-content: space-between;
@@ -260,13 +250,8 @@
 		.uagb-tab {
 			border-top-style: solid;
 			border-left-style: solid;
-			border-bottom-style: none;
-			border-top-left-radius: 4px;
 		}
 
-		.uagb-tab:last-child {
-			border-bottom-style: solid;
-		}
 	}
 
 	.uagb-tabs__body-wrap {
@@ -277,7 +262,6 @@
 .uagb-tabs__wrap.uagb-tabs__vstyle9-desktop {
 
 	.uagb-tab {
-		border-radius: 30px;
 		border-style: solid;
 		margin: 0 10px 10px 0;
 	}
@@ -285,7 +269,6 @@
 }
 
 .uagb-tabs__wrap.uagb-tabs__vstyle10-desktop {
-	border-style: solid;
 
 	ul.uagb-tabs__panel {
 
@@ -297,6 +280,38 @@
 	.uagb-tab {
 		margin: 10px 10px 10px 10px;
 		text-align: center;
+	}
+}
+
+@media (min-width: 1024px) {
+
+	.uagb-tabs__wrap.uagb-tabs__vstyle10-desktop,
+	.uagb-tabs__wrap.uagb-tabs__hstyle5-desktop {
+		border-style: solid;
+	}
+	.uagb-tabs__wrap.uagb-tabs__hstyle2-desktop {
+
+		ul.uagb-tabs__panel {
+			border-bottom: 1px solid #b3b6b9;
+		}
+
+	}
+	.uagb-tabs__wrap.uagb-tabs__hstyle4-desktop,
+	.uagb-tabs__wrap.uagb-tabs__vstyle9-desktop {
+
+		.uagb-tab {
+			border-radius: 30px;
+		}
+
+	}
+	.uagb-tabs__wrap.uagb-tabs__vstyle8-desktop {
+
+		ul.uagb-tabs__panel {
+	
+			.uagb-tab {
+				border-top-left-radius: 4px;
+			}
+		}
 	}
 }
 
@@ -315,7 +330,8 @@
 			padding: 0;
 			max-width: 100%;
 			display: flex;
-			flex-direction: row;
+			flex-direction: row;			
+			flex-wrap: unset;
 		}
 
 		.uagb-tabs__body-wrap {
@@ -331,16 +347,9 @@
 			border-radius: 4px;
 		}
 
-		.uagb-tabs__body-wrap {
-			border-style: solid;
-		}
 	}
 
 	.uagb-tabs__wrap.uagb-tabs__hstyle2-tablet {
-
-		ul.uagb-tabs__panel {
-			border-bottom-style: solid;
-		}
 
 		.uagb-tab {
 			margin: 10px 10px -1px 0;
@@ -350,10 +359,6 @@
 
 		.uagb-tabs__active {
 			border-bottom-style: solid;
-		}
-
-		.uagb-tabs__body-wrap {
-			border: none;
 		}
 	}
 
@@ -465,15 +470,11 @@
 
 		ul.uagb-tabs__panel {
 			margin: 0;
-			border-bottom-style: solid;
 
 			.uagb-tab {
 				margin: 10px 10px 0 0;
 			}
 
-			.uagb-tabs__active {
-				border-bottom-style: solid;
-			}
 		}
 
 		.uagb-tabs__body-wrap {
@@ -487,11 +488,11 @@
 			margin-bottom: 0;
 			min-width: 25%;
 			max-width: 25%;
+			justify-content: normal;
 
 			.uagb-tab {
 				border-top-style: solid;
 				border-left-style: solid;
-				border-bottom-style: none;
 				border-top-left-radius: 4px;
 			}
 
@@ -538,10 +539,33 @@
 			}
 		}
 	}
+
+	.uagb-tabs__wrap.uagb-tabs__hstyle5-desktop.uagb-tabs__hstyle3-tablet,
+	.uagb-tabs__wrap.uagb-tabs__hstyle5-desktop.uagb-tabs__hstyle4-tablet,
+	.uagb-tabs__wrap.uagb-tabs__hstyle5-desktop.uagb-tabs__hstyle3-tablet .uagb-tabs__body-wrap,
+	.uagb-tabs__wrap.uagb-tabs__hstyle5-desktop.uagb-tabs__hstyle4-tablet .uagb-tabs__body-wrap,
+	.uagb-tabs__wrap.uagb-tabs__hstyle5-desktop.uagb-tabs__vstyle6-tablet,
+	.uagb-tabs__wrap.uagb-tabs__hstyle5-desktop.uagb-tabs__vstyle8-tablet,
+	.uagb-tabs__wrap.uagb-tabs__hstyle5-desktop.uagb-tabs__vstyle9-tablet,
+	.uagb-tabs__wrap.uagb-tabs__hstyle5-desktop.uagb-tabs__vstyle6-tablet .uagb-tabs__body-wrap,
+	.uagb-tabs__wrap.uagb-tabs__hstyle5-desktop.uagb-tabs__vstyle8-tablet .uagb-tabs__body-wrap,
+	.uagb-tabs__wrap.uagb-tabs__hstyle5-desktop.uagb-tabs__vstyle9-tablet .uagb-tabs__body-wrap  {
+		border-style: none;
+	}
 }
 
 /* Mobile */
 @media (max-width: 767px) {
+
+	.uagb-tabs__wrap.uagb-tabs__vstyle9-tablet {
+
+		ul.uagb-tabs__panel {
+
+			.uagb-tab {
+				border-radius: unset;
+			}
+		}
+	}
 
 	.uagb-tabs__wrap.uagb-tabs__hstyle1-mobile,
 	.uagb-tabs__wrap.uagb-tabs__hstyle2-mobile,
@@ -549,6 +573,7 @@
 	.uagb-tabs__wrap.uagb-tabs__hstyle4-mobile,
 	.uagb-tabs__wrap.uagb-tabs__hstyle5-mobile {
 		flex-direction: column;
+		border-style: none;
 
 		ul.uagb-tabs__panel {
 			margin-bottom: 0;
@@ -563,6 +588,10 @@
 			flex-direction: row;
 			max-width: 100%;
 		}
+
+		.uagb-tab {
+			border-radius: unset;
+		}
 	}
 
 	.uagb-tabs__wrap.uagb-tabs__vstyle6-mobile,
@@ -571,6 +600,7 @@
 	.uagb-tabs__wrap.uagb-tabs__vstyle9-mobile,
 	.uagb-tabs__wrap.uagb-tabs__vstyle10-mobile {
 		flex-direction: row;
+		border-style: none;		
 
 		ul.uagb-tabs__panel {
 			margin-bottom: 0;
@@ -581,7 +611,7 @@
 		}
 
 		.uagb-tab {
-
+			border-radius: unset;
 			p {
 				margin: 0;
 			}
@@ -721,24 +751,24 @@
 	.uagb-tabs__wrap.uagb-tabs__vstyle8-mobile {
 
 		ul.uagb-tabs__panel {
-			min-width: 25%;
-			max-width: 25%;
+			min-width: 24%;
+			max-width: 24%;
 
 			.uagb-tab {
-				border-top-style: solid;
-				border-left-style: solid;
-				border-bottom-style: none;
-				border-top-left-radius: 4px;
+				border-style: solid;
+				margin: 0 10px 10px 0;
+				border-radius: 4px;
 			}
 
-			.uagb-tab:last-child {
-				border-bottom-style: solid;
+			.uagb-tabs__body-wrap {
+				border-style: solid;
 			}
 		}
 
 		.uagb-tabs__body-wrap {
 			border-style: solid;
 		}
+
 	}
 
 	.uagb-tabs__wrap.uagb-tabs__vstyle9-mobile {
@@ -837,7 +867,6 @@
 	.uagb-tabs__wrap.uagb-tabs__stack2-mobile {
 
 		ul.uagb-tabs__panel {
-			border-bottom-style: solid;
 
 			.uagb-tab {
 				margin: 0 0 10px 0;
